--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,20 @@
-共通のヘッダー
+<header class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <i class="far fa-grin-squint-tears fa-3x text-white"></i>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link">ホーム</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">プロフィール</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">ランキング</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">新規作成</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">新規登録</a>
+      </li>
+    </ul>
+</header>
