--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,19 @@
   <head>
     <title>OogiriApp</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
 
   <body>
-    <%= yield %>
+    <%= render("layouts/header") %>
+    <main>
+      <div class="h-100  w-100">
+        <%= yield %>
+      </div>
+    </main>
+    <%= render "layouts/footer" %>
   </body>
 </html>
