--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,1 +1,8 @@
-answer作成
+<div class="question-area">
+  
+</div>
+<div class="container form-group">
+  <textarea class="form-control-lg"></textarea>
+  <button type="button" class="btn btn-danger">回答する</button>
+  <button type="button" class="btn btn-danger">キャンセル</button>
+</div>
