--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,23 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-danger">
-    <i class="far fa-grin-squint-tears fa-3x text-white"></i>
+    <i class="far fa-grin-squint-tears fa-3x text-white">ogiri</i>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a href="#" class="nav-link">ホーム</a>
+        <a href="/answer/index" class="nav-link">ホーム</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">プロフィール</a>
+        <a href="/user/:id/edit" class="nav-link">プロフィール編集</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">ランキング</a>
+        <a href="/answer/rank" class="nav-link">ランキング</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">新規作成</a>
+        <a href="/answer/new" class="nav-link">新規作成</a>
+      </li>
+      <li>
+        <a href="/" class="nav-link">ログアウト</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">新規登録</a>
+        <a href="/user/new" class="nav-link">新規登録</a>
       </li>
     </ul>
 </header>
