--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,9 +2,11 @@
   <div class="logo text-danger">
     <i class="far fa-grin-squint-tears fa-4x">ogiri</i>
   </div>
-    <div class="container lead p-5"> 
+  <form>
+    <div class="container lead p-5 form-group"> 
         <p>ユーザー名</p><input class="form-control-lg" type="name">
         <p>メールアドレス</p><input class="form-control-lg" type="email">
         <p>パスワード</p><input class="form-control-lg" type="password">
         <button type="button" class="btn btn-danger">新規登録</button>
     </div>
+  </form>
