--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,9 +2,11 @@
   <div class="logo text-danger">
     <i class="far fa-grin-squint-tears fa-4x">ogiri</i>
   </div>
-    <div class="container lead p-5">  
+  <form>
+    <div class="container lead p-5 form-group">  
         <p>メールアドレス</p><input class="form-control-lg" type="email">
         <p>パスワード</p><input class="form-control-lg" type="password">
         <button type="button" class="btn btn-danger">ログイン</button>
     </div>
+  </form>
 </div>
