--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,12 +1,13 @@
 <div class="h-100 w-100">
-  <div class="logo text-danger">
-    <i class="far fa-grin-squint-tears fa-4x">ogiri</i>
-  </div>
-  <form>
-    <div class="container lead p-5 form-group">  
-        <p>メールアドレス</p><input class="form-control-lg" type="email">
-        <p>パスワード</p><input class="form-control-lg" type="password">
-        <button type="button" class="btn btn-danger">ログイン</button>
+  <form class="container">
+    <div class="form-group">
+      <label for="email">Eメール</label>
+      <input class="form-control form-control-lg" id="email" type="email">
     </div>
-  </form>
+    <div class="form-group">
+      <label for="password">パスワード</label>
+      <input class="form-control form-control-lg" id="password" type="password">
+    </div>
+      <button type="button" class="btn btn-primary">ログイン</button>
+</form>
 </div>
