--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
       <label for="passqord">パスワード</label>
-      <input class="form-control form-control-lg" id="passqord" type="password">
+      <input class="form-control form-control-lg" id="password" type="password">
     </div>
     <div class="form-group">
       <label for="introduction">自己紹介文</label>
