--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,25 @@
 <div class="h-100 w-100">
-  <div class="logo text-danger">
-    <i class="far fa-grin-squint-tears fa-4x">ogiri</i>
-  </div>
-  <form>
-    <div class="container lead p-5 form-group"> 
-        <p>ユーザー名</p><input class="form-control-lg" type="name">
-        <p>メールアドレス</p><input class="form-control-lg" type="email">
-        <p>パスワード</p><input class="form-control-lg" type="password">
-        <button type="button" class="btn btn-danger">新規登録</button>
+  <form class="container">
+    <div class="form-group">
+      <label for="file">ユーザー画像</label>
+      <input class="d-block" id="file" type="file">
     </div>
-  </form>
+    <div class="form-group">
+      <label for="user_name">ユーザー名</label>
+      <input class="form-control form-control-lg" id="user_name" type="text">
+    </div>
+    <div class="form-group">
+      <label for="email">Eメール</label>
+      <input class="form-control form-control-lg" id="email" type="email">
+    </div>
+    <div class="form-group">
+      <label for="password">パスワード</label>
+      <input class="form-control form-control-lg" id="password" type="password">
+    </div>
+    <div class="form-group">
+      <label for="introduction">自己紹介文</label>
+      <textarea class="form-control" id="introduction" rows="10" cols="40"></textarea>
+    </div>
+      <button type="button" class="btn btn-primary">保存</button>
+      <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+</form>
