--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -3,8 +3,8 @@
 </div>
 <div class="container">
   <div class="form-group">
-    <label>あなたの回答</label>
-    <textarea class="form-control"></textarea>
+    <label for="answer_content">あなたの回答</label>
+    <textarea class="form-control" rows="10" col="40"></textarea>
     <button type="button" class="btn btn-primary">回答する</button>
     <button type="button" class="btn btn-outline-secondary">キャンセル</button>
   </div> 
