--- a/app/views/layouts/_question.html.erb
+++ b/app/views/layouts/_question.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="border">
+  <div>
     <div class="row justify-content-center">
-      <p class="lead">2020/05/28のお題</p>
+      <h3>2020/05/28のお題</h3>
     </div>
-    <div class="row border-top">
+    <div class="row border">
       <p class="lead col">これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。</p>
     </div>
   </div>
