--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -1,13 +1,20 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 40px;
+}
+
 main {
-  height: calc(100vh - 50px);
-  min-height: calc(100vh - 50px);
-  padding-top: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 footer {
-  height: 50px;
-}
-
-header {
-  height: 70px;
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  bottom: 0;
 }
