--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-danger">
-      <a class="navbar-brand" href="/answer/index">
+      <a class="navbar-brand" href="/answers">
         <i class="far fa-grin-squint-tears fa-3x text-white">ogiri</i>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,22 +9,22 @@
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="/answer/index" class="nav-link">ホーム</a>
+            <a href="/answers" class="nav-link">ホーム</a>
           </li>
           <li class="nav-item">
-            <a href="/user/:id/edit" class="nav-link">プロフィール編集</a>
+            <a href="/users/:id/edit" class="nav-link">プロフィール編集</a>
           </li>
           <li class="nav-item">
-            <a href="/answer/rank" class="nav-link">ランキング</a>
+            <a href="/answers/rank" class="nav-link">ランキング</a>
           </li>
           <li class="nav-item">
-            <a href="/answer/new" class="nav-link">新規作成</a>
+            <a href="/answers/new" class="nav-link">新規作成</a>
           </li>
           <li>
             <a href="/" class="nav-link">ログアウト</a>
           </li>
           <li class="nav-item">
-            <a href="/user/new" class="nav-link">新規登録</a>
+            <a href="/users/new" class="nav-link">新規登録</a>
           </li>
         </ul>
         </div>
