--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,4 +1,6 @@
-<%= render "layouts/question" %>
+<div class="container py-4">
+  <%= render "layouts/question" %>
+ </div>
 
 <% @count.times do |n| %>  
 <%= render "layouts/answer" %>
