--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,11 +1,13 @@
 <div class="question-area">
   <%= render "layouts/question" %>
 </div>
-<div class="container">
+<div class="container pt-5">
   <div class="form-group">
     <label for="answer_content">あなたの回答</label>
     <textarea class="form-control" rows="10" col="40"></textarea>
-    <button type="button" class="btn btn-primary">回答する</button>
-    <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+    <div class=" row pt-4 justify-content-end">
+      <button type="button" class="btn btn-primary">回答する</button>
+      <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+    </div>
   </div> 
 </div>
