--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -8,6 +8,8 @@
       <label for="password">パスワード</label>
       <input class="form-control form-control-lg" id="password" type="password">
     </div>
-      <button type="button" class="btn btn-primary">ログイン</button>
+      <div class="row justify-content-end">
+        <button type="button" class="btn btn-primary">ログイン</button>
+      </div>
 </form>
 </div>
