--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="border">
-    <div class="row border-bottom">
-      <img  class="col-1">
-      <p class="col-8">山中祥太郎</p>
+  <div class="border p-3">
+    <div class="row">
+      <img src="test_icon.png" class="col-1">
+      <a href="/users/:id" class="col-8 font-weight-bold">山中祥太郎</a>
       <button type="button" class="btn btn-primary col-2">フォローする</button>
     </div>
     <div class="row">
-      <p　class="col">これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。</p>
+      <p class="col pt-4">これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。</p>
     </div>
   </div>
 </div>
