--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,1 +1,30 @@
-answer詳細
+<div class="container">
+  <div class="border p-3 mb-5">
+    <div class="row">
+      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
+      <a href="/users/:id" class="col-9 font-weight-bold">山中祥太郎</a>
+      <p class="col-2">2020/05/28</p>
+    </div>
+    <div class="row">
+      <a href="/answers/:id" class="col pt-4 lead">これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。</a>
+    </div>
+    <div class="row justify-content-end">
+      <div class="col-2">
+        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+        <a href="/users">100</a>
+      </div>
+      <div class="col-2">
+        <a href="/comments/new">
+          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+        </a>
+        <a href="/users">100</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="comment-area">
+  <% @count.times do |n| %> 
+  <%= render "layouts/comment" %>
+  <% end %>
+</div>
