--- a/app/views/layouts/_answer.html.erb
+++ b/app/views/layouts/_answer.html.erb
@@ -1,19 +1,21 @@
 <div class="container">
   <div class="border p-3">
     <div class="row">
-      <img src="test_icon.png" class="rounded-circle col-1" >
+      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
       <a href="/users/:id" class="col-9 font-weight-bold">山中祥太郎</a>
       <p class="col-2">2020/05/28</p>
     </div>
     <div class="row">
-      <a href="/answers/:id" class="col">これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。</a>
+      <a href="/answers/:id" class="col pt-4">これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。</a>
     </div>
     <div class="row justify-content-end">
       <div class="col-1">
         <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
       </div>
-      <div class="col-1">
-        <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+      <div class="col-2">
+        <a href="/comments/new">
+          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+        </a>
       </div>
     </div>
   </div>
