--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-danger">
+  <nav class="navbar navbar-expand-md navbar-dark bg-danger sticky-top">
       <a class="navbar-brand" href="/answers">
         <i class="far fa-grin-squint-tears fa-3x text-white">ogiri</i>
       </a>
