--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,20 +5,22 @@
     </div>
     <div class="form-group">
       <label for="user_name">ユーザー名</label>
-      <input class="form-control form-control-lg" id="user_name" type="text">
+      <input class="form-control form-control-lg" id="user_name" type="text" value="山中祥太郎">
     </div>
     <div class="form-group">
       <label for="email">Eメール</label>
-      <input class="form-control form-control-lg" id="email" type="email">
+      <input class="form-control form-control-lg" id="email" type="email" value="example@example.com">
     </div>
     <div class="form-group">
       <label for="passqord">パスワード</label>
-      <input class="form-control form-control-lg" id="password" type="password">
+      <input class="form-control form-control-lg" id="password" type="password" value="example">
     </div>
     <div class="form-group">
       <label for="introduction">自己紹介文</label>
-      <textarea class="form-control" id="introduction" rows="10" cols="40"></textarea>
+      <textarea class="form-control" id="introduction" rows="10" cols="40">これは自己紹介文です。</textarea>
     </div>
+    <div class="row justify-content-end">
       <button type="button" class="btn btn-primary">保存</button>
       <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+    </div>
 </form>
