--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,6 +20,8 @@
       <label for="introduction">自己紹介文</label>
       <textarea class="form-control" id="introduction" rows="10" cols="40"></textarea>
     </div>
+    <div class="row justify-content-end">
       <button type="button" class="btn btn-primary">保存</button>
       <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+    </div>
 </form>
