--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,22 @@
-<%= render "layouts/user" %>
+<div class="container">
+  <div class="pl-3 pt-3 pr-3 pb-4 border mb-5">
+    <div class="row">
+      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
+    </div>
+    <div class="row">
+      <p class="font-weight-bold lead col-8 pl-5">山中祥太郎</p>
+      <button type="button" class="btn btn-primary col-2">フォローする</button>
+    </div>
+    <div class="row">
+      <p class="col pt-4">これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。</p>
+    </div>
+    <div class="row">
+      <a href="/users" class="col-2">100フォロー中</a>
+      <a href="/users" class="col-2">100フォロワー</a>
+    </div>
+  </div>
+</div>
+
+<% @count.times do |n| %>  
+<%= render "layouts/answer" %>
+<% end %>
