--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="pl-3 pt-3 pr-3 pb-4 border mb-5">
     <div class="row">
-      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
+      <%= image_tag '/test_icon.png', class: "rounded-circle col-2" %>
     </div>
     <div class="row">
-      <p class="font-weight-bold lead col-8 pl-5">山中祥太郎</p>
+      <p class="font-weight-bold lead col-8 pl-5 pt-4">山中祥太郎</p>
       <button type="button" class="btn btn-primary col-2">フォローする</button>
     </div>
     <div class="row">
