--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,15 +1,13 @@
-<div class="h-100 w-100">
-  <form class="container">
-    <div class="form-group">
-      <label for="email">Eメール</label>
-      <input class="form-control form-control-lg" id="email" type="email">
+<%= form_tag("/users/login", method: :post, class:"container") do %>
+  <div class="form-group">
+    <label for="email">Eメール</label>
+    <input class="form-control form-control-lg" id="email" type="email" name="email" value="<%= @email %>">
+  </div>
+  <div class="form-group">
+    <label for="password">パスワード</label>
+    <input class="form-control form-control-lg" id="password" type="password" name="password" value="<%= @password %>">
+  </div>
+    <div class="row justify-content-end">
+      <input type="submit" class="btn btn-primary" value="ログイン">
     </div>
-    <div class="form-group">
-      <label for="password">パスワード</label>
-      <input class="form-control form-control-lg" id="password" type="password">
-    </div>
-      <div class="row justify-content-end">
-        <button type="button" class="btn btn-primary">ログイン</button>
-      </div>
-</form>
-</div>
+<% end %>
