--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,24 +8,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="navbar-nav ml-auto">
+        <% if session[:user_id] %>
           <li class="nav-item">
-            <a href="/answers" class="nav-link">ホーム</a>
+            <%= link_to("ホーム", "/answers", class:"nav-link") %>
           </li>
           <li class="nav-item">
-            <a href="/users/:id/edit" class="nav-link">プロフィール編集</a>
+            <%= link_to("プロフィール編集", "/users/#{@current_user.id}/edit", class:"nav-link") %> 
           </li>
           <li class="nav-item">
-            <a href="/answers/rank" class="nav-link">ランキング</a>
+            <%= link_to("ランキング", "/answers/rank", class:"nav-link") %>
           </li>
           <li class="nav-item">
-            <a href="/answers/new" class="nav-link">新規作成</a>
+            <%= link_to("新規作成", "/answers/new", class:"nav-link") %>
           </li>
           <li>
-            <a href="/" class="nav-link">ログアウト</a>
+            <%= link_to("ログアウト", "/users/logout", method: :post, class:"nav-link") %>
           </li>
+        <% else %>  
           <li class="nav-item">
-            <a href="/users/new" class="nav-link">新規登録</a>
+            <%= link_to("新規登録", "/users/new", class:"nav-link") %>
           </li>
+        <% end %>  
         </ul>
         </div>
   </nav>
