--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,26 @@
-<form class="container">
+<%= form_tag("/users/#{@user.id}", method: :patch, class:"container") do %>
     <div class="form-group">
       <label for="file">ユーザー画像</label>
       <input class="d-block" id="file" type="file">
     </div>
     <div class="form-group">
       <label for="user_name">ユーザー名</label>
-      <input class="form-control form-control-lg" id="user_name" type="text" value="山中祥太郎">
+      <input class="form-control form-control-lg" id="user_name" type="text" name="name" value="<%= @user.name %>">
     </div>
     <div class="form-group">
       <label for="email">Eメール</label>
-      <input class="form-control form-control-lg" id="email" type="email" value="example@example.com">
+      <input class="form-control form-control-lg" id="email" type="email" name="email" value="<%= @user.email %>"> 
     </div>
     <div class="form-group">
-      <label for="passqord">パスワード</label>
-      <input class="form-control form-control-lg" id="password" type="password" value="example">
+      <label for="password">パスワード</label>
+      <input class="form-control form-control-lg" id="password" type="password" name="password" value="<%= @user.password %>">
     </div>
     <div class="form-group">
       <label for="introduction">自己紹介文</label>
-      <textarea class="form-control" id="introduction" rows="10" cols="40">これは自己紹介文です。</textarea>
+      <textarea class="form-control" id="introduction" rows="10" cols="40" name="content"><%= @user.introduction %></textarea>
     </div>
     <div class="row justify-content-end">
-      <button type="button" class="btn btn-primary">保存</button>
-      <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+      <input type="submit" class="btn btn-primary" value="保存">
+      <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
     </div>
-</form>
+<% end %>
