--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,11 @@
       <%= image_tag '/test_icon.png', class: "rounded-circle col-2" %>
     </div>
     <div class="row">
-      <p class="font-weight-bold lead col-8 pl-5 pt-4">山中祥太郎</p>
+      <p class="font-weight-bold lead col-8 pl-5 pt-4"><%= @user.name %></p>
       <button type="button" class="btn btn-primary col-2">フォローする</button>
     </div>
     <div class="row">
-      <p class="col pt-4">これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。これは自己紹介文です。</p>
+      <p class="col pt-4"><%= @user.introduction %></p>
     </div>
     <div class="row">
       <a href="/users" class="col-2">100フォロー中</a>
