--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 
   <body>
     <%= render("layouts/header") %>
-    <% if flash[:notice] %>
-        <div class="alert alert-warning">
-          <%= flash[:notice] %>
-        </div>
+    <% if flash %>
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div, value, class: ["alert", "alert-"+key, "text-center"]) %>
       <% end %>
+    <% end %>
     <main>
       <%= yield %>
     </main>
