create_answer_new

--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,1 +1,13 @@
-answer編集
+<div class="question-area">
+  <%= render "layouts/question" %>
+</div>
+<%= form_tag("/answers/#{@answer.id}", method: :patch, class: "container pt-5") do %>
+  <div class="form-group">
+    <label for="answer_content">あなたの回答</label>
+    <textarea class="form-control" rows="10" col="40" name="content"><%= @answer.content %></textarea>
+    <div class=" row pt-4 justify-content-end">
+      <input type="submit" class="btn btn-primary" value="編集する">
+      <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
+    </div>
+  </div> 
+<% end %>
