--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -2,8 +2,29 @@
   <%= render "layouts/question" %>
  </div>
 
-<% @count.times do |n| %>  
-<%= render "layouts/answer" %>
+<% @answers.each do |answer| %>  
+  <div class="container">
+  <div class="border p-3">
+    <div class="row">
+      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
+      <%= link_to(answer.user.name, "/users/#{answer.user.id}", class: "col-9 font-weight-bold") %>
+      <p class="col-2"><%= answer.created_at %></p>
+    </div>
+    <div class="row">
+      <%= link_to(answer.content, "/answers/#{answer.id}", class: "col pt-4") %>
+    </div>
+    <div class="row justify-content-end">
+      <div class="col-1">
+        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+      </div>
+      <div class="col-2">
+        <a href="/comments/new">
+          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 <% end %>  
 
   
