--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -2,11 +2,13 @@
   <div class="border p-3 mb-5">
     <div class="row">
       <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
-      <a href="/users/:id" class="col-9 font-weight-bold">山中祥太郎</a>
-      <p class="col-2">2020/05/28</p>
+      <%= link_to(@user.name, "/users/#{@user.id}", class: "col-9 font-weight-bold") %>
+      <p class="col-2"><%= @answer.created_at %></p>
     </div>
     <div class="row">
-      <a href="/answers/:id" class="col pt-4 lead">これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。これは答えの内容です。</a>
+      <div class="col pt-4 lead">
+      <%= link_to(@answer.content, "/answers/#{@answer.id}/edit") %>
+      </div>
     </div>
     <div class="row justify-content-end">
       <div class="col-2">
