--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -3,8 +3,8 @@
 </div>
 <%= form_tag("/answers", method: :post, class: "container pt-5") do %>
   <div class="form-group">
-    <label for="answer_content">あなたの回答</label>
-    <textarea class="form-control" rows="10" col="40" name="content"></textarea>
+    <%= label_tag(:answer_content, "あなたの回答") %>
+    <%= text_area_tag(:content, "#{@answer.content}", class: "form-control") %>
     <div class=" row pt-4 justify-content-end">
       <input type="submit" class="btn btn-primary" value="回答する">
       <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
