--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,14 @@
-<% @count.times do |n| %> 
-<%= render "layouts/user" %>
+<% @users.each do |user| %>
+<div class="container">
+  <div class="border p-3">
+    <div class="row">
+      <img src="test_icon.png" class="col-1">
+      <%= link_to(user.name, "/users/#{user.id}", class: "col-8 font-weight-bold") %>
+      <button type="button" class="btn btn-primary col-2">フォローする</button>
+    </div>
+    <div class="row">
+      <p class="col pt-4"><%= user.introduction %></p>
+    </div>
+  </div>
+</div>
 <% end %>
