--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -6,7 +6,7 @@
   <div class="container">
   <div class="border p-3">
     <div class="row">
-      <%= image_tag '/test_icon.png', class: "rounded-circle col-1" %>
+      <%= image_tag "/user_images/#{answer.user.image_name}", class: "col-1" %>
       <%= link_to(answer.user.name, "/users/#{answer.user.id}", class: "col-9 font-weight-bold") %>
       <p class="col-2"><%= answer.created_at %></p>
     </div>
