--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="border p-3">
     <div class="row">
-      <img src="test_icon.png" class="col-1">
+      <%= image_tag "/user_images/#{user.image_name}", class: "col-1" %>
       <%= link_to(user.name, "/users/#{user.id}", class: "col-8 font-weight-bold") %>
       <button type="button" class="btn btn-primary col-2">フォローする</button>
     </div>
