create_comment_newandedit

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<%= form_tag("/comments/#{@answer.id}/create", method: :post, class: "container") do %>
   <div class="form-group">
     <label for="answer_content">あなたのコメント</label>
-    <textarea class="form-control" rows="10" col="40"></textarea>
+    <textarea class="form-control" rows="10" col="40" name="content"></textarea>
     <div class="row justify-content-end pt-4">
-      <button type="button" class="btn btn-primary">コメント</button>
-      <button type="button" class="btn btn-outline-secondary">キャンセル</button>
+      <input type="submit" class="btn btn-primary" value="コメントする">
+      <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
     </div>
   </div> 
-</div>
+<% end %>
