--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -18,9 +18,9 @@
         <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
       </div>
       <div class="col-2">
-        <a href="/comments/new">
+        <%= link_to("/comments/#{answer.id}/new") do %>
           <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
-        </a>
+        <% end %>
       </div>
     </div>
   </div>
