--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -16,17 +16,32 @@
         <a href="/users">100</a>
       </div>
       <div class="col-2">
-        <a href="/comments/new">
+        <%= link_to("/comments/#{@answer.id}/new") do %>
           <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
-        </a>
+        <% end %>
         <a href="/users">100</a>
       </div>
     </div>
   </div>
 </div>
 
-<div class="comment-area">
-  <% @count.times do |n| %> 
-  <%= render "layouts/comment" %>
-  <% end %>
+<% @answer.comments.each do |comment| %>
+<div class="container">
+  <div class="border p-3 mb-5">
+    <div class="row">
+      <%= image_tag "/user_images/#{comment.user.image_name}", class: "image_fluid col-1" %>
+      <%= link_to("#{comment.user.name}", "/users/#{comment.user.id}", class: "col-9 font-weight-bold") %>
+      <p class="col-2"><%= comment.created_at %></p>
+    </div>
+    <div class="col pt-4">
+      <%= link_to(comment.content, "/comments/#{comment.id}/edit") %>
+    </div>
+    <div class="row justify-content-end">
+      <div class="col-2">
+        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+        <a href="/users">100</a>
+      </div>
+    </div>
+  </div>
 </div>
+<% end %>
