--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -12,8 +12,16 @@
     </div>
     <div class="row justify-content-end">
       <div class="col-2">
-        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
-        <a href="/users">100</a>
+        <% if Like.find_by(user_id: @current_user.id, answer_id: @answer.id) %>
+          <%= link_to("/likes/#{@answer.id}/destroy", {method: "post"}) do %>
+            <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% else %>
+          <%= link_to("/likes/#{@answer.id}/create", {method: "post"}) do %>
+            <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% end %>
+        <%= link_to(@likes_count, "/users") %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{@answer.id}/new") do %>
