--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,15 @@
     </div>
     <div class="row justify-content-end">
       <div class="col-1">
-        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+        <% if Like.find_by(user_id: @current_user.id, answer_id: answer.id) %>
+          <%= link_to("/likes/#{answer.id}/destroy", {method: "post"}) do %>
+            <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% else %>
+          <%= link_to("/likes/#{answer.id}/create", {method: "post"}) do %>
+            <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% end %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{answer.id}/new") do %>
