--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -25,9 +25,13 @@
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{@answer.id}/new") do %>
-          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+          <% if Comment.find_by(user_id: @current_user.id, answer_id: @answer.id) %>
+            <i class="fas fa-comments fa-2x fa-fw" style="color:royalblue;"></i>
+          <% else %>
+            <i class="far fa-comment fa-2x fa-fw"></i>
+          <% end %>
         <% end %>
-        <a href="/users">100</a>
+        <%= link_to(@comments_count, "/users") %>
       </div>
     </div>
   </div>
@@ -46,8 +50,16 @@
     </div>
     <div class="row justify-content-end">
       <div class="col-2">
-        <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
-        <a href="/users">100</a>
+        <% if Commentlike.find_by(user_id: @current_user.id, comment_id: comment.id) %>
+          <%= link_to("/commentlikes/#{comment.id}/destroy", {method: "post"}) do %>
+            <i class="fas fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% else %>
+          <%= link_to("/commentlikes/#{comment.id}/create", {method: "post"}) do %>
+            <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
+          <% end %>
+        <% end %>
+        <%= link_to(comment.commentlikes.count, "/users") %>
       </div>
     </div>
   </div>
