--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -27,7 +27,11 @@
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{answer.id}/new") do %>
-          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+          <% if Comment.find_by(user_id: @current_user.id, answer_id: answer.id) %>
+            <i class="fas fa-comments fa-2x fa-fw" style="color:royalblue;"></i>
+          <% else %>
+            <i class="far fa-comments fa-2x fa-fw"></i>
+          <% end %>
         <% end %>
       </div>
     </div>
