--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -28,7 +28,7 @@
           <% if Comment.find_by(user_id: @current_user.id, answer_id: @answer.id) %>
             <i class="fas fa-comments fa-2x fa-fw" style="color:royalblue;"></i>
           <% else %>
-            <i class="far fa-comment fa-2x fa-fw"></i>
+            <i class="far fa-comments fa-2x fa-fw"></i>
           <% end %>
         <% end %>
         <%= link_to(@comments_count, "/users") %>
