--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="question-area">
   <%= render "layouts/question" %>
 </div>
-<%= form_tag("/answers/#{@answer.id}", method: :patch, class: "container pt-5") do %>
+<%= form_for @answer, :html => {class: "container pt-5"} do |f| %>
   <div class="form-group">
-    <%= label_tag(:answer_content, "あなたの回答") %>
-    <%= text_area_tag(:content, "#{@answer.content}", class: "form-control") %>
-    <div class=" row pt-4 justify-content-end">
-      <input type="submit" class="btn btn-primary" value="編集する">
-      <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
+    <%= f.label :answer_content, "あなたの回答" %>
+    <%= f.text_area :content, class: "form-control", size: "40x10" %>
+    <div class="row pt-4 justify-content-end">
+      <%= f.submit "編集する", class: "btn btn-primary" %>
+      <input type="reset" class= "btn btn-outline-secondary" value="キャンセル">
     </div>
   </div> 
 <% end %>
