--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,12 +1,12 @@
 <div class="question-area">
   <%= render "layouts/question" %>
 </div>
-<%= form_tag("/answers", method: :post, class: "container pt-5") do %>
+<%= form_for @answer, :html => {class: "container"} do |f| %>
   <div class="form-group">
-    <%= label_tag(:answer_content, "あなたの回答") %>
-    <%= text_area_tag(:content, "#{@answer.content}", class: "form-control") %>
+    <%= f.label :answer_content, "あなたの回答" %>
+    <%= f.text_area :content, class: "form-control", size: "40x10" %>
     <div class=" row pt-4 justify-content-end">
-      <input type="submit" class="btn btn-primary" value="回答する">
+      <%= f.submit  "回答する", class: "btn btn-primary" %>
       <input type="reset" class="btn btn-outline-secondary" value="キャンセル">
     </div>
   </div> 
