--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -24,11 +24,17 @@
             <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
           <% end %>
         <% end %>
+        <%= link_to(answer.likes.count, "/users") %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{answer.id}/new") do %>
-          <i class="fas fa-comments fa-2x fa-fw" style="color:lavender;"></i>
+          <% if Comment.find_by(user_id: @current_user.id, answer_id: answer.id) %>
+            <i class="fas fa-comments fa-2x fa-fw" style="color:royalblue;"></i>
+          <% else %>
+            <i class="far fa-comment fa-2x fa-fw"></i>
+          <% end %>
         <% end %>
+        <%= link_to(answer.comments.count, "/users") %>
       </div>
     </div>
   </div>
