--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
       <%= f.label :introduction, "自己紹介文" %>
-      <%= f.text_area :introduction, class: "form-control" %>
+      <%= f.text_area :introduction, class: "form-control", size: "40x10" %>
     </div>
     <div class="row justify-content-end">
       <%= f.submit "保存", class: "btn btn-primary" %>
