--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -24,6 +24,7 @@
             <i class="far fa-heart fa-2x fa-fw" style="color:red;"></i>
           <% end %>
         <% end %>
+        <%= link_to(answer.likes.count, "/users") %>
       </div>
       <div class="col-2">
         <%= link_to("/comments/#{answer.id}/new") do %>
@@ -33,6 +34,7 @@
             <i class="far fa-comments fa-2x fa-fw"></i>
           <% end %>
         <% end %>
+        <%= link_to(answer.comments.count, "/users") %>
       </div>
     </div>
   </div>
