--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -8,7 +8,7 @@
     <div class="row">
       <%= image_tag "/user_images/#{answer.user.image_name}", class: "col-1" %>
       <%= link_to(answer.user.name, "/users/#{answer.user.id}", class: "col-9 font-weight-bold") %>
-      <p class="col-2"><%= answer.created_at %></p>
+      <p class="col-2"><%= answer.created_at.strftime("%Y/%m/%d %H:%M:%S")%></p>
     </div>
     <div class="row">
       <%= link_to(answer.content, "/answers/#{answer.id}", class: "col pt-4") %>
