--- a/app/views/layouts/_question.html.erb
+++ b/app/views/layouts/_question.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <div class="row justify-content-center">
-      <h3>2020/05/28のお題</h3>
+      <h3><%= "#{Date.current}" + "のお題" %></h3>
     </div>
     <div class="row border">
       <p class="lead col">これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。</p>
