--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
     <div class="row">
       <%= image_tag "/user_images/#{@user.image_name}", class: "image_fluid col-1" %>
       <p class="col-9 font-weight-bold"><%= @user.name %></p>
-      <p class="col-2"><%= answer.created_at %></p>
+      <p class="col-2"><%= answer.created_at.strftime("%Y/%m/%d %H:%M:%S") %></p>
     </div>
     <div class="row">
       <%= link_to(answer.content, "/answers/#{answer.id}", class: "col pt-4") %>
