set_today_question

--- a/app/views/layouts/_question.html.erb
+++ b/app/views/layouts/_question.html.erb
@@ -4,7 +4,7 @@
       <h3><%= "#{Date.current}" + "のお題" %></h3>
     </div>
     <div class="row border">
-      <p class="lead col">これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。これはお題の内容です。</p>
+      <p class="lead col"><%= @today_question.content %></p>
     </div>
   </div>
 </div>
