--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <%= link_to("お題作成", "/questions/new", class:"nav-link") %>
             </li>
+            <li>
+              <%= link_to("お題の更新", "/questions/set", method: :post, class:"nav-link") %>
+            </li>
           <% end %>
         <% else %>  
           <li class="nav-item">
